todos os modulos a funcionar
todo: filtros de mapa, filtros de tabela
utilizadores e autenticação
pesquisar na bd pelo nome ou id?
