# Source/backend/swagger_server/models/__init__.py
@@ -5,5 +5,7 @@ from __future__ import absolute_import
 # import models into model package
 from swagger_server.models.error import Error
 from swagger_server.models.station import Station
+from swagger_server.models.station_update import StationUpdate
 from swagger_server.models.user import User
 from swagger_server.models.user_create import UserCreate
+from swagger_server.models.user_user_id_body import UserUserIdBody
